--- a/package.json
+++ b/package.json
@@ -30,5 +30,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "formik": "^2.1.5",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
+    "moment": "^2.27.0",
+    "formik-material-ui": "^3.0.0-alpha.0",
+    "moment-timezone": "^0.5.31",
+    "yup": "^0.29.2"
   }
 }
